<?xml version="1.0" encoding="utf-8"?>
<!-- - - Copyright 2011 Birkett Enterprise Ltd - - Licensed under the Apache 
	License, Version 2.0 (the "License"); - you may not use this file except 
	in compliance with the License. - You may obtain a copy of the License at 
	- - http://www.apache.org/licenses/LICENSE-2.0 - - Unless required by applicable 
	law or agreed to in writing, software - distributed under the License is 
	distributed on an "AS IS" BASIS, - WITHOUT WARRANTIES OR CONDITIONS OF ANY 
	KIND, either express or implied. - See the License for the specific language 
	governing permissions and - limitations under the License. - -->

<resources>
	<string name="app_name">Phonelocator</string>

	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_web_site">Open Web site</string>
	<string name="menu_item_test_alarm">Test alarm</string>
	<string name="menu_item_update_log">Update history</string>
	<string name="menu_item_buddy_message">Buddy message settings</string>
	<string name="menu_item_clear_log">Clear history</string>
    <string name="menu_update_now">Update now</string>
	
	<string name="periodic_updates">Enable updates</string>
	<string name="periodic_updates_summary">Send location to server periodically</string>

	<string name="update_frequency">Update Frequency</string>
	<string name="update_frequency_summary">How often updates are sent</string>

	<string name="connection_failed">Connection failed</string>
	<string name="retry">Retry</string>
	<string name="quit">Quit</string>
	<string name="sign_in_toast">Opening web site for one time sign in / registration</string>
	
	<string name="registering_progress_dialog_message">Registering&#8230;</string>

	<string name="update_log_no_updates_sent_message">Local update history is empty. Use the ten20 web site to clear your location history.</string>
	<string name="location_provider_description">Location provider: </string>

	<string name="error_io_exception">Could not connect to server</string>
	<string name="error_connect_exception">Could not connect to server</string>
	<string name="error_corrupt_stream">Corrupt stream</string>
	<string name="error_authentication_failed">Authentication failed</string>
	<string name="error_location_poll_failed">Could not determine location</string>
	
	<string name="gps_timeout">GPS timeout</string>
	<string name="gps_timeout_summary">How long to wait for a GPS lock</string>

    <string name="fused_enabled">Fused location provider</string>
    <string name="fused_enabled_summary">Fused Location Provider intelligently manages the underlying location technology and gives you the best location according to your needs. (Requires Google play services)</string>

    <string name="gps_enabled">GPS enabled</string>
	<string name="gps_enabled_summary">Requires more battery and a clear view of the sky. Will fall back to network location if GPS not available.</string>		
	
	<string name="trigger_message_udpate">update</string>
	<string name="trigger_message_alarm">alarm</string>
	
	<string name="alarm_notification_ticker_text">Phonelocator alarm activated</string>
	<string name="alarm_notification_content_title">Phonelocator</string>
	<string name="alarm_notification_content_text">Tap to decactivate alarm</string>

	<string name="hide_sms_trigger">Hide SMS trigger messages</string>
	<string name="hide_sms_trigger_summary">If enabled, SMS trigger messages (SMSes starting with \"update\" and \"alarm\") will not be shown in the phone\'s messaging app</string>		

	<string name="passcode_preference">Passcode</string>
	<string name="passcode_preference_summary">Passcode used to protect settings and in SMS trigger messages</string>

	<string name="passcode_enabled_preference">Passcode enabled</string>
	<string name="passcode_enabled_preference_summary">Require passcode to modify Phonelocator settings and to be sent in SMS trigger messages</string>
	
	
	<string name="passcode_dialog_title">Enter passcode</string>
	<string name="passcode_dialog_ok">OK</string>
	<string name="passcode_dialog_cancel">Cancel</string>
	
	<string name="incorrect_passcode">Incorrect passcode</string>
	<string name="updates_disabled_controller_updates_disabled">Phonelocator is not updating your phone\'s location</string>
	
	<string name="updates_disabled_controller_enable_updates">Enable Updates</string>
	<string name="updates_disabled_controller_settings">Settings</string>
	
	<string name="updates_status_controller_uploading_location">Uploading location</string>
	
	<string name="location_status_controller_waiting_for_location">Waiting for location</string>
	
	<string name="buddy_number_select_from_contacts_button">Select from contacts</string>
	<string name="buddy_number_description">Buddy number</string>
	<string name="buddy_number_hint">Enter recipient</string>	
	<string name="buddy_message_description">Buddy message</string>
	<string name="buddy_message_hint">Enter message to be sent to your buddy when the SIM card is changed</string>
	<string name="buddy_message_save">Save</string>
	<string name="buddy_message_cancel">Cancel</string>
    <string name="buddy_message_default_message">SIM card in phone %S changed. This is the new number. Message sent with ten20 Phonelocator for Android - available for free http://goo.gl/AQZLhu</string>
	
	<string name="countdown_controller_next_update">Next update in</string>
    <string name="countdown_controller_starting_shortly">Next update will start shortly</string>
	
	<string name="buddy_message_not_set_controller_message">Phonelocator can send a message to a buddy when the SIM card in your phone is changed</string>
	<string name="buddy_message_not_set_controller_buddy_settings">Setup</string>
	
	<string name="settings_warning_controller_frequent_update_warning">Frequent updates may have adverse effect on battery life</string>
	
	<string name="settings_warning_controller_non_international_format_buddy_number_warning">Buddy nummber should be saved in international format</string>

	<string name="website_url">https://ten20live.com/console</string>

    <string name="sign_in_username_email">username or email address</string>
    <string name="sign_in_password">password</string>
    <string name="sign_in_error_username_or_email">Enter your username or email address</string>
    <string name="sign_in_error_password">Enter your password</string>
    <string name="sign_in_error_invalid_email_user_name_or_password">Invalid email, username or password</string>
    <string name="sign_in_could_not_connect_to_server">Could not connect to server</string>

    <string name="sign_up_email">email address</string>
    <string name="sign_up_username">username</string>
    <string name="sign_up_password">password</string>
    <string name="sign_up_error_email">Enter a valid email address</string>
    <string name="sign_up_error_username">Enter a username</string>
    <string name="sign_up_error_password">Enter a password (at least 8 characters)</string>
    <string name="sign_up_user_already_registered">User already registered</string>
    <string name="sign_up_could_not_connect_to_server">Could not connect to server</string>
    <string name="sign_up_tos_link">By clicking sign up you are agreeing to our <u>terms of service</u></string>

    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>

    <string name="tab_sign_up">Sign up</string>
    <string name="tab_sign_in">Sign in</string>

    <string name="add_phone">Add phone</string>
    <string name="add_phone_hint">Phone name</string>
    <string name="add_phone_description">Add this phone to your ten20 account</string>
    <string name="add_phone_checking_tracker_added">Checking if phone is added to your account</string>
    <string name="add_phone_error">Could not connect to server</string>
    <string name="add_phone_retry">Retry</string>
    <string name="add_phone_enter_name">Enter a name for this phone</string>
</resources>
