<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/web_site"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_web_site"/>
    <item
        android:id="@+id/settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_settings"/>
    <item
        android:id="@+id/update_log"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_update_log"/>
    <item
        android:id="@+id/buddy_message"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_buddy_message"/>
    <item
        android:id="@+id/test_alarm"
        android:showAsAction="ifRoom"
        android:title="@string/menu_item_test_alarm"/>

</menu>