<?xml version="1.0" encoding="utf-8"?>
<!--
 - 
 -  Copyright 2012 Birkett Enterprise Ltd
 -
 -  Licensed under the Apache License, Version 2.0 (the "License");
 -  you may not use this file except in compliance with the License.
 -  You may obtain a copy of the License at
 -
 -     http://www.apache.org/licenses/LICENSE-2.0
 -
 -  Unless required by applicable law or agreed to in writing, software
 -  distributed under the License is distributed on an "AS IS" BASIS,
 -  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 -  See the License for the specific language governing permissions and
 -  limitations under the License.
 - 
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/updates_disabled_controller_updates_disabled"
        android:textAppearance="?android:textAppearanceMedium" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_padding" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/button_enable_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates_disabled_controller_enable_updates"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updates_disabled_controller_settings"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>